# goit-ds-hw-03

task1/: create_db.py  main.py  pyproject.toml  read.py
task2/: .gitignore  authors.json  authors.py  main.py  pyproject.toml  qoutes.json
