[tool.poetry]
name = "task2"
version = "0.1.0"
description = ""
authors = ["user name <вÐerterujamp@gmail.comÐ>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
sqlalchemy = "^2.0.37"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
